--- a/categories.html
+++ b/categories.html
@@ -4,7 +4,7 @@
         <title>Alex Clark - Python Web Developer</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="./theme/css/main.css" type="text/css" />
-                <link href="http://blog.aclark.net/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Alex Clark - Python Web Developer Atom Feed" />
+                <link href="http://aclark.net/blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Alex Clark - Python Web Developer Atom Feed" />
                 
         <!--[if IE]>
                 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
@@ -19,7 +19,7 @@
 </head>
 
 <body id="index" class="home">
-<a href="https://github.com/ACLARKNET/aclarknet.github.com">
+<a href="https://github.com/ACLARKNET/blog">
 <img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" />
 </a>
         <header id="banner" class="body">
@@ -35,7 +35,7 @@
                                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://blog.aclark.net/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="http://aclark.net/blog/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
                             
                                                     <li><a href="http://twitter.com/aclark4life">aclark4life</a></li>
                                                     <li><a href="https://www.gittip.com/aclark4life">aclark4life (Gittip)</a></li>
